[tool.poetry]
name = "motozem_better_search"
version = "0.1.0"
description = ""
authors = ["Vojtech Podhajsky <vojtech@podhajsky.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.0"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
